增加白名单

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,26 @@
 [Runtime]
-# 程序运行时间
-second = 60
+# 程序运行时间（秒）
+# int
+# 3600s = 60min = 1h
+second = 7200
 
 [Sleeptime]
-# 程序运行间隔
-second = 1
+# 程序运行间隔（秒）
+# float
+second = 0.5
 
 [data]
 # roomid为直播房间id,但不一定是直播间号
 postdata = {
-           'roomid': '5170',
+           'roomid': '5555734',
            'csrf_token': '',
            'csrf': '',
            'visit_id': '',
            }
+
+[Visual]
+# 可视化图表参数
+width=1880
+height=600
+title_text_size=25
+title_top=20
